--- a/internal/houston/ui/src/pages/index.astro
+++ b/internal/houston/ui/src/pages/index.astro
@@ -5,6 +5,6 @@ import Navigation from '@/components/navigation.jsx';
 
 <Layout title="Houston" description="Houston" ogimage="https://houston.seline.so/og.png">
 	<div class="container mx-auto pt-3">
-		<Navigation client:only />
+		<Navigation client:load activeTab="queues" />
 	</div>
 </Layout>
